--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,17 +17,21 @@
 
 <a asp-action="Pinned">
     <div class="pinned btnPanel">
-        <i class="fa-solid fa-thumbtack"></i>
+        <span class="iconify" data-icon="bi:pin"></span>
         <h1>Pinned</h1>
     </div>
 </a>
 
-<div style="display: none" class="journal btnPanel">
-    <span class="iconify-inline" data-icon="healthicons:i-note-action"></span>
-    <h1>Journal</h1>
-</div>
+<a href="#">
+    <div class="journal btnPanel">
+        <span class="iconify-inline" data-icon="healthicons:i-note-action"></span>
+        <h1>Journal</h1>
+    </div>
+</a>
 
-<div class="settings btnPanel">
-    <span class="iconify-inline" data-icon="akar-icons:gear"></span>
-    <h1>Settings</h1>
-</div>
+<a href="#">
+    <div class="settings btnPanel">
+        <span class="iconify-inline" data-icon="akar-icons:gear"></span>
+        <h1>Settings</h1>
+    </div>
+</a>
